# ClearSolve

./: .env.example  .gitignore  README.md  index.html  netlify.toml.template  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.claude/agents/: 00-orchestrator.md  01-product-owner.md  02-software-architect.md  03-sdet-lead.md  04-repository-analyst.md  05-delivery-manager.md  06-senior-fullstack-engineer.md  07-code-reviewer.md  08-bug-investigator.md  09-devops-engineer.md  10-documentation-engineer.md  11-security-reviewer.md  12-release-manager.md  13-playwright-engineer.md  14-api-automation-engineer.md  15-performance-test-engineer.md  16-test-designer.md
.claude/commands/: README-COMMANDS.md
.claude/memory/: README-MEMORY.md  agent-feedback.md  architecture-lessons.md  devops-lessons.md  improvement-backlog.md  lessons-learned.md  project-patterns.md  recurring-issues.md  review-lessons.md  testing-lessons.md  user-preferences.md
docs/: ACCEPTANCE_CRITERIA.md  API_SPEC.md  ARCHITECTURE.md  DATA_MODEL.md  DEVOPS.md  IMPLEMENTATION_PLAN.md  PRD.md  QUALITY_GATES.md  README.md  RISKS.md  TASKS.md  TECH_DECISIONS.md  TEST_COVERAGE_MATRIX.md  TEST_STRATEGY.md  USER_STORIES.md
engine/: Cargo.toml
engine/src/: cfr.rs  equity.rs  evaluator.rs  lib.rs  rng.rs
public/: _headers
scripts/: cfrBench.ts  cfrCheck.ts  cfrParity.ts  copyWasm.mjs  equityParity.ts  evalParity.ts  genLibrary.ts  realism.ts  realismCharts.ts  realismE1.ts  realismOpens.ts  realismScenario.ts  realismVs3bet.ts  wasmCheck.mjs
src/: vite-env.d.ts
src/app/: App.tsx  (+3 more)
(+113 files in other folders)
